# decharges-sudeducation

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  create_requirements.sh  lintall.sh  manage.py  pyproject.toml  requirements-tests.txt  requirements.txt  setup.cfg
decharges/: asgi.py  urls.py  wsgi.py
decharges/bulma_templatetags/: apps.py
decharges/bulma_templatetags/templatetags/: bulma_tags.py  strings.py
decharges/bulma_templatetags/tests/: conftest.py  forms.py  test_inputs.py  test_templates.py  utils.py
decharges/decharge/: admin.py  apps.py  mixins.py  models.py  urls.py  validators.py  views.py
decharges/decharge/forms/: __init__.py  import_temps_syndicats_form.py  renommer_beneficiaire_form.py  temps_de_decharge_form.py  utilisation_credit_de_temps_syndical_ponctuel_form.py  utilisation_temps_decharge_form.py
decharges/decharge/migrations/: 0001_initial.py  0002_initial.py  0003_alter_corps_options.py  0004_alter_utilisationtempsdecharge_etp.py  0005_alter_utilisationtempsdecharge_unique_together.py  0006_auto_20210511_1051.py  0007_alter_tempsdedecharge_unique_together.py  0008_alter_utilisationcreditdetempssyndicalponctuel_demi_journees_de_decharges.py  0009_alter_utilisationtempsdecharge_civilite.py  0010_auto_20210713_1457.py
decharges/decharge/templatetags/: data_manipulation.py
decharges/decharges/: apps.py  views.py
decharges/parametre/: admin.py  apps.py  models.py
decharges/settings/: base.py  dev.py  tests.py
decharges/user_manager/: admin.py  apps.py  models.py  urls.py
docker/: Dockerfile
imports/academies/: academies.csv  import_academies.py
imports/historique/: .gitignore  historique.example.csv
(+72 files in other folders)
