[metadata]
name = sudeducation
url = https://www.sudeducation.org/
version = 0.1
description = Gestion des décharges
long_description = file: README.md
long_description_content_type = text/markdown
license = Properitary
author = Hashbang
author_email = contact@hashbang.fr
keywords =
  django
  sudeducation
  décharges
  syndicat

[options]
packages = find:
include_package_data=True
setup_requires = pytest_runner
install_requires =
    django==3.2
    mysqlclient>=2,<3
tests_require =
    black==20.8b1
    pip-tools>=6,<7
    pytest-cov>=2,<3
    pytest-flake8>=1,<2
    pytest-isort>=1,<2
    pytest>=6,<7
    pytest-django>=4,<5
    diff-cover>=5,<6
    pytest-factoryboy>=2,<3

[aliases]
test = pytest

[tool:pytest]
DJANGO_SETTINGS_MODULE = decharges.settings.tests
addopts = --reuse-db --cov-report xml --cov-report term-missing --cov=decharges --disable-pytest-warnings --ignore=docs
norecursedirs = static

[flake8]
exclude = *migrations*,venv
max-line-length = 88
extend-ignore = E203, E501, W503, E231

[isort]
default_section = THIRDPARTY
multi_line_output = 3
skip_glob = **/migrations/**
include_trailing_comma = True
force_grid_wrap=0
use_parentheses=True
line_length=88

[coverage:run]
omit = */wsgi.py,
       */asgi.py,
       manage.py,
       */conftest.py,
       */migrations/*,
       */tests/*,
       */admin/*,
       */settings/*,
       */urls.py,
       */apps.py,
       */assets.py,
       */factories.py,
       */fixtures.py,
       */static/*,

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme

[bdist_wheel]
python-tag = py3
